# TDD-PROJECT-DIO

./: .env  .pre-commit-config.yaml  docker-compose.yml  makefile  pyproject.toml
store/: main.py
store/controllers/: product.py
store/db/: mongo.py
store/models/: base.py  product.py
store/schemas/: __init__.py  base.py  product.py
store/usecases/: product.py
tests/: confltest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
