[tool.poetry]
name = "tdd project"
version = "0.1.0"
description = "[Solange Oliveira <sollangelive71@gmail.com>, n to skip]"
authors = ["solange oliveira <sollangelive71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
motor = "3.3.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"
httpx = "^0.27.0"


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
